# OCR_Test

./: .gitignore  README.md
demo/: Tesseract-OCR_Test.cpp
demo/FreeType_Test/: FreeType_Test.cpp  funset.cpp  funset.hpp
demo/Libjpeg-turbo_Test/: Libjpeg-turbo_Test.cpp  funset.cpp  funset.hpp
demo/Liblept_Test/: Liblept_Test.cpp  funset.cpp  funset.hpp  test_stb.cpp
demo/Tesseract-OCR_Test/: Tesseract-OCR_Test.cpp  funset.cpp  funset.hpp
demo/TextDetect_Test/: TextDetect_Test.cpp  funset.cpp  funset.hpp
demo/UTF8_CPP_Test/: UTF8_CPP_Test.cpp  funset.cpp  funset.hpp
demo/liblepttest/: liblepttest.cpp
prj/linux_cmake_FreeType_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_Libjpeg-turbo_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_Liblept_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_Tesseract-OCR_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_TextDetect_Test/: CMakeLists.txt
prj/linux_cmake_UTF8_CPP_Test/: CMakeLists.txt
prj/x86_x64_vc12/: OCR_Test.sln
prj/x86_x64_vc12/FreeTypetest/: FreeTypetest.vcxproj  FreeTypetest.vcxproj.filters
prj/x86_x64_vc12/Libjpeg-turbo_Test/: Libjpeg-turbo_Test.vcxproj  Libjpeg-turbo_Test.vcxproj.filters
prj/x86_x64_vc12/Tesseract-OCR_Test/: Tesseract-OCR_Test.sln  Tesseract-OCR_Test.vcxproj  Tesseract-OCR_Test.vcxproj.filters
prj/x86_x64_vc12/Tesseract-OCR_Test/Tesseract-OCR_Test/: Tesseract-OCR_Test.vcxproj  Tesseract-OCR_Test.vcxproj.filters
prj/x86_x64_vc12/TextDetect_Test/: TextDetect_Test.vcxproj  TextDetect_Test.vcxproj.filters
prj/x86_x64_vc12/UTF8_CPP_Test/: UTF8_CPP_Test.vcxproj  UTF8_CPP_Test.vcxproj.filters
prj/x86_x64_vc12/giflib/: giflib.vcxproj  giflib.vcxproj.filters
prj/x86_x64_vc12/libFreeType/: libFreeType.vcxproj  libFreeType.vcxproj.filters
prj/x86_x64_vc12/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
prj/x86_x64_vc12/libjpeg-turbo/: jconfigint.h  libjpeg-turbo.vcxproj  libjpeg-turbo.vcxproj.filters
prj/x86_x64_vc12/liblept/: liblept.vcxproj  liblept.vcxproj.filters
prj/x86_x64_vc12/liblepttest/: liblepttest.vcxproj  liblepttest.vcxproj.filters
prj/x86_x64_vc12/libpng/: libpng.vcxproj  libpng.vcxproj.filters
prj/x86_x64_vc12/libtesseract/: libtesseract.vcxproj  libtesseract.vcxproj.filters
prj/x86_x64_vc12/libtiff/: libtiff.vcxproj  libtiff.vcxproj.filters
prj/x86_x64_vc12/zlib/: zlib.vcxproj  zlib.vcxproj.filters
src/: version.txt
src/CvxText/: CvxText.cpp  CvxText.hpp
src/TiRG/: 222t.raw  tirg_raw.cpp  trg.hpp
src/ccmain/: equationdetect.cpp
src/freetype-2.5.5/builds/wince/vc2005-ce/: freetype.vcproj
src/freetype-2.5.5/builds/wince/vc2008-ce/: freetype.vcproj
src/freetype-2.5.5/builds/windows/vc2005/: freetype.vcproj
src/freetype-2.5.5/builds/windows/vc2008/: freetype.vcproj
src/freetype-2.5.5/builds/windows/vc2010/: freetype.vcxproj
src/freetype-2.5.5/builds/windows/visualc/: freetype.dsp  freetype.vcproj
src/freetype-2.5.5/builds/windows/visualce/: freetype.vcproj
src/giflib/giflib-5.1.1/lib/: dgif_lib.c  egif_lib.c  gif_lib.h
src/giflib/giflib-5.1.1/util/: gif2rgb.c
src/leptonica-1.71/src/: boxfunc1.c  classapp.c  compare.c  gplot.c  jbclass.c  parseprotos.c  psio2.c  recogident.c  redefineconstant.h  sel1.c  sel2.c  utils.c  viewfiles.c  writefile.c
src/libjpeg-turbo/win_64_lib/debug/: turbojpeg-static.lib
src/libjpeg-turbo/win_64_lib/release/: turbojpeg-static.lib
src/libpng/lpng1616/: pngstruct.h
src/tesseract-ocr/vs2010/: tesseract.sln
src/tesseract-ocr/vs2010/libtesseract/: libtesseract.vcxproj
src/tesseract-ocr/vs2010/port/: vcsversion.h
src/tesseract-ocr/vs2010/tesseract/: tesseract.vcxproj
src/vs2010/libtesseract/: libtesseract.vcxproj
src/vs2010/port/: vcsversion.h
src/vs2010/tesseract/: tesseract.vcxproj
test_data/: utf8.txt
